<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>de.conterra</groupId>
	<artifactId>babelfish-main</artifactId>
	<version>0.4.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>tRESTle Babelfish main package</name>
	<url>http://developernetwork.conterra.de</url>
	<inceptionYear>2014</inceptionYear>
	<description>The basic package of the tRESTle Babelfish
		
		Includes:
		- the API
		- the web application
		- a very simple sample plugin
	</description>
	<organization>
		<name>con terra - Gesellschaft für Angewandte Informationstechnologie mbH</name>
		<url>http://www.conterra.de</url>
	</organization>
	
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		
		<lombok.version>1.16.18</lombok.version>
		<slf4j.version>1.7.25</slf4j.version>
		<geotools.version>17.2</geotools.version>
		<junit.version>4.12</junit.version>
		<mockito.version>2.8.47</mockito.version>
		<log4j.version>2.8.2</log4j.version>
		
		<plugin.buildhelper.version>3.0.0</plugin.buildhelper.version>
		<plugin.license.version>1.13</plugin.license.version>
		<plugin.findbugs.version>3.0.4</plugin.findbugs.version>
		<plugin.compiler.version>3.6.2</plugin.compiler.version>
		<plugin.javadoc.version>3.0.0-M1</plugin.javadoc.version>
		<plugin.source.version>3.0.1</plugin.source.version>
		<plugin.release.version>2.5.3</plugin.release.version>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>${plugin.buildhelper.version}</version>
					<executions>
						<execution>
							<id>timestamp-property</id>
							<goals>
								<goal>timestamp-property</goal>
							</goals>
							<phase>validate</phase>
							<configuration>
								<name>project.versionYear</name>
								<pattern>yyyy</pattern>
								<locale>en,US</locale>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>${plugin.license.version}</version>
					<configuration>
						<licenseFile>${basedir}/LICENSE</licenseFile>
						<licenseName>apache_v2</licenseName>
						<missingFile>../src/license/THIRD-PARTY.properties</missingFile>
						<useMissingFile>true</useMissingFile>
						<sortArtifactByName>true</sortArtifactByName>
						<fileTemplate>/org/codehaus/mojo/license/third-party-file-groupByLicense.ftl</fileTemplate>
						<licenseMerges>
							<licenseMerge>Apache License, Version 2.0|The Apache Software License, Version 2.0|Apache 2</licenseMerge>
							<licenseMerge>Individual BSD License|BSD License for HSQL|New BSD License|HSQLDB License, a BSD open source license</licenseMerge>
							<licenseMerge>The MIT License|The MIT License(MIT)|MIT License</licenseMerge>
							<licenseMerge>GNU Library or Lesser General Public License version 2.0 (LGPLv2)|Lesser General Public License (LGPL)</licenseMerge>
						</licenseMerges>
					</configuration>
					<executions>
						<execution>
							<id>add-licenses</id>
							<goals>
								<goal>update-project-license</goal>
								<goal>add-third-party</goal>
								<goal>download-licenses</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>${plugin.findbugs.version}</version>
					<configuration>
						<effort>Max</effort>
						<failOnError>false</failOnError>
						<threshold>Low</threshold>
						<xmlOutput>true</xmlOutput>
						<findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
					</configuration>
					<executions>
						<execution>
							<id>analyze-compile</id>
							<phase>compile</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${plugin.compiler.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${plugin.javadoc.version}</version>
					<configuration>
						<additionalparam>-Xdoclint:none</additionalparam>
						<links>
							<link>https://projectlombok.org/api</link>
							<link>https://www.slf4j.org/apidocs</link>
							<link>http://docs.geotools.org/stable/javadocs</link>
							<link>http://junit.org/junit4/javadoc/latest</link>
							<link>https://static.javadoc.io/org.mockito/mockito-core/${mockito.version}</link>
							<link>https://logging.apache.org/log4j/2.0/log4j-core/apidocs</link>
							<link>https://logging.apache.org/log4j/2.0/log4j-slf4j-impl/apidocs</link>
						</links>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-source-plugin</artifactId>
					<version>${plugin.source.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>${plugin.release.version}</version>
					<configuration>
						<preparationGoals>clean</preparationGoals>
						<autoVersionSubmodules>true</autoVersionSubmodules>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
	
	<reporting>
		<outputDirectory>${project.build.directory}/site</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${plugin.findbugs.version}</version>
			</plugin>
		</plugins>
	</reporting>
	
	<scm>
		<developerConnection>scm:git:https://github.com/conterra/babelfish.git</developerConnection>
		<url>https://github.com/conterra/babelfish</url>
	</scm>
	
	<distributionManagement>
		<repository>
			<id>ct-dist-releases-file</id>
			<name>repository for releases</name>
			<url>${release.deployment.url}</url>
		</repository>
		<snapshotRepository>
			<id>ct-dist-snapshots-file</id>
			<name>repository for snapshots</name>
			<url>${snapshot.deployment.url}</url>
		</snapshotRepository>
	</distributionManagement>
	
	<profiles>
		<profile>
			<id>create-javadoc-and-attach-sources</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<modules>
		<module>babelfish-api</module>
		<module>babelfish-webapp</module>
		<module>babelfish-sample</module>
	</modules>
</project>
